--- a/qml.qrc
+++ b/qml.qrc
@@ -1,7 +1,6 @@
-<!DOCTYPE RCC>
-<RCC version="1.0">
+<RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>MainForm.ui.qml</file>
+        <file>RectEllipseTool.qml</file>
     </qresource>
 </RCC>
