was trying to get the gridlines in the repeater to show but ended up having to do something else

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>RectEllipseTool.qml</file>
+        <file>OverlayBase.qml</file>
     </qresource>
 </RCC>
